maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:21: error: not found: type xSortie
        return Tuple2[xSortie, ySortie]
                      ^ShortestPathMaze:21: error: not found: type ySortie
        return Tuple2[xSortie, ySortie]
                               ^ShortestPathMaze:21: error: missing argument list for method apply in object Tuple2
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `apply _` or `apply(_,_)` instead of `apply`.
        return Tuple2[xSortie, ySortie]
                     ^ShortestPathMaze:17: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  while (!aBiscuit(xSortie,ySortie)) {  //On cherche la sortie !
  ^